# fairino-lerobot

./: .gitignore  LICENSE  README.md  pyproject.toml
src/lerobot_robot_fairino/: __init__.py  _sdk.py  config_drag_teleop.py  config_fairino_fr5.py  drag_teleop.py  fairino_fr5.py  safety.py
src/lerobot_robot_fairino/_vendor/fairino/: __init__.py
tests/: test_drag_teach.py  test_ee_delta.py  test_features.py  test_registration.py  test_robot_mock.py
