[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_robot_fairino"
version = "0.1.0"
description = "Fairino FR5 collaborative arm plugin for HuggingFace LeRobot"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Ashish Ramesh", email = "ashish.ramesh@eternal.ag" }]
keywords = ["lerobot", "fairino", "fr5", "robotics", "cobot", "vla"]
dependencies = [
  "lerobot>=0.5,<0.6",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
"Fairino SDK" = "https://github.com/FAIR-INNOVATION/fairino-python-sdk"
"LeRobot" = "https://github.com/huggingface/lerobot"

# The fairino SDK is vendored (pure-Python) under _vendor/ and added to sys.path lazily
# at connect time; it is not a PyPI dependency.

[tool.setuptools.packages.find]
where = ["src"]
include = ["lerobot_robot_fairino*"]

[tool.setuptools.package-data]
"lerobot_robot_fairino" = ["_vendor/fairino/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
